--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.2.11",
