--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "crypto-js": "^4.0.0",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.2.11",
     "ng-sidebar": "^9.2.0",
+    "ngx-spinner": "^9.0.1",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.2",
     "rxjs": "~6.4.0",
